Overflow-wrap fixed

--- a/src/styles/ToDo.module.css
+++ b/src/styles/ToDo.module.css
@@ -27,6 +27,7 @@
   display: flex;
   justify-content: center;
   min-width: 300px;
+  max-width: 338px;
   padding: 10px;
   margin: 15px;
   background: rgba(255, 255, 255, 0.6);
