--- a/src/styles/ToDoNote.module.css
+++ b/src/styles/ToDoNote.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   position: relative;
   min-width: 300px;
+  max-width: 338px;
   padding: 10px;
   margin: 15px;
   background: rgba(255, 255, 255, 0.3);
@@ -18,6 +19,7 @@
 
 .todonote > h3 {
   flex: 1;
+  overflow-wrap: break-word;
   color: whitesmoke;
   font-size: 20px;
   font-weight: 400;
